src/test/ui/impl-trait/issues/issue-78722.stderr
error[E0658]: `async` blocks are not allowed in constants
  --> $DIR/issue-78722.rs:12:20
   |
LL |         let f: F = async { 1 };
   |                    ^^^^^^^^^^^
   |
   = note: see issue #85368 <https://github.com/rust-lang/rust/issues/85368> for more information
   = help: add `#![feature(const_async_blocks)]` to the crate attributes to enable

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/issue-78722.rs:12:13
   |
LL |         let f: F = async { 1 };
   |             ^ constants cannot evaluate destructors
...
LL |     }],
   |     - value is dropped here

error[E0271]: type mismatch resolving `<impl Future<Output = ()> as Future>::Output == u8`
  --> $DIR/issue-78722.rs:10:13
   |
LL |             async {}
   |             ^^^^^^^^ expected `()`, found `u8`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0271, E0493, E0658.
For more information about an error, try `rustc --explain E0271`.
